<resources>
    <string name="app_name">FunPlus</string>
    <string name="equal_sign">=</string>
    <string name="fit_to_scan">fit to scan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="press_button_to_record">press button to record, release button to listen</string>
    <string name="press_button_to_see_previous_word">press button to see previous word</string>
    <string name="press_button_to_see_next_work">press button to see next word</string>
    <string name="what_do_you_see_in_the_picture">what do you see in the picture?</string>
    <string name="apple">Apple</string>
    <string name="_123">123</string>
    <string name="abc">abc</string>
    <string name="click_to_check_if_your_answer_is_correct">click to check if your answer is correct</string>
    <string name="your_answer_is_not_correct">your answer is not correct</string>
    <string name="try_again">try again</string>
    <string name="try_a_new_one">try a new one</string>
    <string name="press_camera_button">press camera button to scan image and see what you won</string>
    <string name="see_your_prize_list">click to see your prize list</string>
    <string name="_play_number_games">click button to play number games</string>
    <string name="play_word_games">click button to play word games</string>
    <string name="tired">tired</string>
    <string name="active">active</string>
    <string name="game">game</string>
    <string name="graph">graph</string>
    <string name="step">step</string>
    <string name="success_rate">Rate of questions answered correctly</string>
    <string name="energy_status">Energy status</string>
    <string name="prevImage">Click to view previous image</string>
    <string name="nextImage">Click to view next image</string>
    <string name="displayData">Click to display data</string>
    <string name="sos">Click to send a picture in case of emergency</string>
    <string name="backToMain">Click to go back to main activity</string>
</resources>
