<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/sadFaceIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/your_answer_is_not_correct"
        android:src="@drawable/sad_foreground"
        android:layout_marginBottom="50dp"
        android:elevation="8dp"/>

    <LinearLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/tryAgainBtn"
            android:layout_height="65dp"
            android:layout_width="180dp"
            android:background="@drawable/again_button"
            android:src="@drawable/ic_refresh"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:contentDescription="@string/try_again"
            android:elevation="8dp">
        </ImageButton>

        <Button
            android:id="@+id/newGameBtn"
            android:layout_width="180dp"
            android:layout_height="65dp"
            android:contentDescription="@string/try_a_new_one"
            android:background="@drawable/again_button"
            android:text="NEW"
            android:textSize="30sp"
            android:layout_margin="20dp"
            android:textColor="@color/colorPrimaryLight"
            android:layout_gravity="center_horizontal"
            android:elevation="8dp"/>
    </LinearLayout>


</LinearLayout>
