<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/num1Btn"
            style="@android:style/DeviceDefault.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/colorLightGray"
            android:textColor="@color/colorLightBlue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signBtn"
            style="@android:style/DeviceDefault.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/colorLightGray"
            android:textColor="@color/colorRed"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/num2Btn"
            style="@android:style/DeviceDefault.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/colorLightGray"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/equalBtn"
            style="@android:style/DeviceDefault.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray"
            android:text="@string/equal_sign"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/okBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rb_checked_bg"
            android:buttonTint="@color/colorRed"
            android:padding="6dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rb_checked_bg"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/colorRed"
            android:padding="6dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rb_checked_bg"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/colorRed"
            android:padding="6dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30sp" />
    </RadioGroup>

    <Button
        android:id="@+id/okBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/click_to_check_if_your_answer_is_correct"
        android:text="@string/ok"
        android:textColor="@color/colorLightGreen"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
